src/test/ui/bad/bad-expr-path.stderr
error[E0425]: cannot find function `log` in this scope
  --> $DIR/bad-expr-path.rs:4:5
   |
LL |     log(debug, m1::arguments);
   |     ^^^ not found in this scope

error[E0425]: cannot find value `debug` in this scope
  --> $DIR/bad-expr-path.rs:4:9
   |
LL |     log(debug, m1::arguments);
   |         ^^^^^ not found in this scope

error[E0425]: cannot find value `arguments` in module `m1`
  --> $DIR/bad-expr-path.rs:4:20
   |
LL |     log(debug, m1::arguments);
   |                    ^^^^^^^^^ not found in `m1`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
